--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@theme-ui/presets": "^0.3.5",
     "gatsby": "^2.32.3",
+    "gatsby-plugin-theme-ui": "^0.3.5",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "theme-ui": "^0.3.5"
   },
   "scripts": {
     "develop": "gatsby develop",
