--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -7,6 +7,7 @@
     "@theme-ui/presets": "^0.3.5",
     "gatsby": "^2.32.3",
     "gatsby-plugin-theme-ui": "^0.3.5",
+    "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "theme-ui": "^0.3.5"
